fixed output text alignment/wrapping

--- a/assets/styles/outputCode.css
+++ b/assets/styles/outputCode.css
@@ -21,6 +21,7 @@
 #outputCode { 
     font-size: 15px;
     padding-left: 1vw;
+    padding-right: 1vw;
     text-align: left;
     word-wrap: break-word;
     overflow-wrap: break-word;
